@@ -1,5 +1,6 @@
 Changelog for ghcid
 
+    Read additional arguments from .ghcid file if present
 0.6.7
     #104, add --ignore-loaded flag for use with -fobject-code
     #103, deal with new GHC error formatting
